--- a/enjeux.html
+++ b/enjeux.html
@@ -55,44 +55,50 @@
       </ul>
     </section>
 
-    <section class="section card">
-      <h2>Pourquoi une académie d’accompagnement ?</h2>
-      <table>
-        <thead>
-          <tr><th>Besoins identifiés</th><th>Réponse de l’académie</th></tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Limiter le temps et la posture</td>
-            <td>Sessions de jeu chronométrées ; sensibilisation à l’ergonomie</td>
-          </tr>
-          <tr>
-            <td>Prévenir les dérives commerciales</td>
-            <td>Décodage critique des loot boxes, ateliers parents-enfants</td>
-          </tr>
-          <tr>
-            <td>Favoriser l’équilibre vie active / numérique</td>
-            <td>Activités physiques, défis “tech-free”</td>
-          </tr>
-          <tr>
-            <td>Renforcer les compétences sociales</td>
-            <td>Gestion des conflits, esprit d’équipe, communication</td>
-          </tr>
-          <tr>
-            <td>Impliquer les parents</td>
-            <td>Rapports de progression, webinaires, groupes de parole</td>
-          </tr>
-          <tr>
-            <td>Développer des talents</td>
-            <td>Découverte du game design, streaming responsable, orientation métiers</td>
-          </tr>
-        </tbody>
-      </table>
-      <p>
-        <strong>L’académie Ludus Mentis n’est pas la solution unique.</strong>  
-        Elle s’inscrit dans une démarche complémentaire des familles et de l’école, pour transformer une pratique massive et inévitable en opportunité éducative.
-      </p>
-    </section>
+    <!-- POURQUOI UNE ACADÉMIE -------------------------------------------------->
+<section class="section card" id="why-academy">
+  <h2>Pourquoi une académie d’accompagnement ?</h2>
+
+  <table class="compare-table" aria-label="Besoins identifiés et réponses de l’académie">
+    <thead>
+      <tr>
+        <th scope="col">Besoins identifiés</th>
+        <th scope="col">Réponse de l’académie</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td scope="row">Limiter le temps & la posture</td>
+        <td>Sessions de jeu chronométrées ; sensibilisation à l’ergonomie</td>
+      </tr>
+      <tr>
+        <td scope="row">Prévenir les dérives commerciales</td>
+        <td>Décodage critique des loot boxes ; ateliers parents-enfants</td>
+      </tr>
+      <tr>
+        <td scope="row">Favoriser l’équilibre vie active / numérique</td>
+        <td>Activités physiques ; défis « tech-free »</td>
+      </tr>
+      <tr>
+        <td scope="row">Renforcer les compétences sociales</td>
+        <td>Gestion des conflits ; esprit d’équipe ; communication</td>
+      </tr>
+      <tr>
+        <td scope="row">Impliquer les parents</td>
+        <td>Rapports de progression ; webinaires ; groupes de parole</td>
+      </tr>
+      <tr>
+        <td scope="row">Développer des talents</td>
+        <td>Découverte du game design ; streaming responsable ; orientation métiers</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <p style="margin-top:1.5em;">
+    <strong>L’académie Ludus Mentis n’est pas la solution unique.</strong><br>
+    Elle s’inscrit dans une démarche complémentaire des familles et de l’école, pour transformer une pratique massive et inévitable en opportunité éducative.
+  </p>
+</section>
 
     <section class="section card">
       <h2>Pour aller plus loin : Sources principales</h2>
