--- a/concept.html
+++ b/concept.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Notre concept – Ludus Mentis</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Notre concept – Ludus Mentis</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <div id="header"></div>
 
-    <main class="container">
-        <section class="section">
-            <h1>Le jeu vidéo comme levier éducatif</h1>
-            <p>
-                Ludus Mentis transforme le jeu vidéo en un espace d’apprentissage stimulant, bienveillant et structuré. Loin des clichés, notre approche repose sur une sélection rigoureuse de jeux collaboratifs et pédagogiques.
-            </p>
-            <p>
-                Encadrés par des animateurs formés, les jeunes développent des compétences psychosociales essentielles tout en jouant. Nous privilégions les jeux coopératifs, les défis en équipe, et les moments de réflexion après chaque session.
-            </p>
-        </section>
+  <div id="header"></div>
 
-        <section class="section card">
-            <h2>Ce que les enfants apprennent concrètement</h2>
-            <ul>
-                <li>💬 Communiquer clairement avec leurs coéquipiers</li>
-                <li>🧘 Gérer leurs émotions dans des situations stressantes</li>
-                <li>🎯 Se fixer des objectifs et persévérer pour les atteindre</li>
-                <li>🫱 S’intégrer à un groupe et coopérer avec bienveillance</li>
-            </ul>
-        </section>
+  <main class="container">
 
-        <section class="section">
-            <h2>Comment ça marche en pratique ?</h2>
-            <p>
-                Nous utilisons des jeux comme <strong>Overcooked</strong>, <strong>Rocket League</strong> ou <strong>Keep Talking and Nobody Explodes</strong>. Ces jeux sont des outils : ils servent de support à des activités de groupe et à des temps d’échange pour relier ce qui se passe à l’écran à la vie réelle.
-            </p>
-            <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
-        </section>
+    <section class="section card">
+      <h1>Le jeu vidéo comme levier éducatif</h1>
+      <p>
+        Ludus Mentis transforme le jeu vidéo en un espace d’apprentissage stimulant, bienveillant et structuré. Loin des clichés, notre approche repose sur une sélection rigoureuse de jeux collaboratifs et pédagogiques.
+      </p>
+      <p>
+        Encadrés par des animateurs formés, les jeunes développent des compétences psychosociales essentielles tout en jouant. Nous privilégions les jeux coopératifs, les défis en équipe, et les moments de réflexion après chaque session.
+      </p>
+    </section>
 
-        <section class="section card">
-          <h2>Une vision à long terme</h2>
-          <p>
-            Après une première phase “académie” axée sur le bien-être et les compétences sociales, Ludus Mentis envisage d’ouvrir une filière esport plus compétitive.
-          </p>
-           <p>
-               Cette filière sera accessible uniquement aux jeunes ayant démontré leur fair-play, leur persévérance et leur maturité numérique. Pour nous, la performance, la santé et l’équilibre sont indissociables.
-           </p>
-        </section>
-    </main>
+    <section class="section card">
+      <h2>Ce que les enfants apprennent concrètement</h2>
+      <ul>
+        <li>💬 Communiquer clairement avec leurs coéquipiers</li>
+        <li>🧘 Gérer leurs émotions dans des situations stressantes</li>
+        <li>🎯 Se fixer des objectifs et persévérer pour les atteindre</li>
+        <li>🫱 S’intégrer à un groupe et coopérer avec bienveillance</li>
+      </ul>
+    </section>
 
-    <div id="footer"></div>
+    <section class="section card">
+      <h2>Comment ça marche en pratique&nbsp;?</h2>
+      <p>
+        Nous utilisons des jeux comme <strong>Overcooked</strong>, <strong>Rocket League</strong> ou <strong>Keep Talking and Nobody Explodes</strong>. Ces jeux sont des outils : ils servent de support à des activités de groupe et à des temps d’échange pour relier ce qui se passe à l’écran à la vie réelle.
+      </p>
+      <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
+    </section>
 
+    <section class="section card">
+      <h2>Une vision à long terme</h2>
+      <p>
+        Après une première phase “académie” axée sur le bien-être et les compétences sociales, Ludus Mentis envisage d’ouvrir une filière esport plus compétitive.
+      </p>
+      <p>
+        Cette filière sera accessible uniquement aux jeunes ayant démontré leur fair-play, leur persévérance et leur maturité numérique. Pour nous, la performance, la santé et l’équilibre sont indissociables.
+      </p>
+    </section>
+
+  </main>
+
+  <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
 </html>
