--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        <p style="margin-top: 1.5em;">
            Notre mission est de transformer ce temps d'écran en une expérience constructive.
        </p>
-       <a href="enjeux.html" class="cta-button" style="font-size: 1em; padding: 0.8em 1.5em;">Voir les chiffres &amp; sources détaillés</a>
+      <a href="enjeux.html" class="btn" style="font-size: 1em; padding: 0.8em 1.5em;">Voir les chiffres &amp; sources détaillés</a>
     </section>
 
 
@@ -63,7 +63,7 @@
       <p>
         Ludus Mentis est une initiative locale soutenue par la <strong>commune de Walhain</strong> et la <strong>Fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.
       </p>
-      <a href="academie.html" class="cta-button">Découvrir notre académie</a>
+      <a href="academie.html" class="btn">Découvrir notre académie</a>
     </section>
 
       <section class="section card" style="text-align:center;">
