--- a/concept.html
+++ b/concept.html
@@ -36,7 +36,7 @@
       <p>
         Nous utilisons des jeux comme <strong>Overcooked</strong>, <strong>Rocket League</strong> ou <strong>Keep Talking and Nobody Explodes</strong>. Ces jeux sont des outils : ils servent de support à des activités de groupe et à des temps d’échange pour relier ce qui se passe à l’écran à la vie réelle.
       </p>
-      <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
+      <a href="methodologie.html" class="btn">Voir notre méthode pédagogique</a>
     </section>
 
     <section class="section card">
