--- a/mentions.html
+++ b/mentions.html
@@ -15,7 +15,7 @@
         Ludus Mentis – Association à but non lucratif (asbl)<br>
         Siège social : Walhain, Belgique<br>
         Email : info@ludusmentis.be<br>
-        Responsable de publication : L’équipe Ludus Mentis<br>
+        Responsable de publication : Antoine Billard<br>
       </p>
     </section>
 
