--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
   <section class="section hero">
   <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
-  <h1>Ludus Mentis&nbsp;: Faire du jeu vidéo une force pour nos jeunes</h1>
+ <h1>Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
 <p>
-  Chez Ludus Mentis, le jeu vidéo devient un outil d’apprentissage, de partage et de développement personnel.
-  Notre accompagnement pédagogique permet aux jeunes de découvrir les atouts du jeu – communication, gestion des émotions, esprit d’équipe – pour s’épanouir à l’écran et au-delà.
+  Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. Grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. Pour s'épanouir à l'écran, comme dans la vie de tous les jours.
 </p>
 </section>
   <section class="section card" id="concept">
