--- a/concept.html
+++ b/concept.html
@@ -32,11 +32,19 @@
     </section>
 
     <section class="section card">
-      <h2>Comment ça marche en pratique&nbsp;?</h2>
-      <p>
-        Nous utilisons des jeux comme <strong>Overcooked</strong>, <strong>Rocket League</strong> ou <strong>Keep Talking and Nobody Explodes</strong>. Ces jeux sont des outils : ils servent de support à des activités de groupe et à des temps d’échange pour relier ce qui se passe à l’écran à la vie réelle.
-      </p>
-      <a href="methodologie.html" class="btn">Voir notre méthode pédagogique</a>
+   <h2>Des jeux choisis pour leurs vertus pédagogiques</h2>
+<p>
+  Nous n'utilisons pas n'importe quels jeux. Notre sélection privilégie la coopération et la communication. Par exemple :
+  <ul>
+    <li>
+      <strong>Overcooked :</strong> un jeu de cuisine chaotique qui impose une communication et une coordination sans faille pour réussir en équipe.
+    </li>
+    <li>
+      <strong>Keep Talking and Nobody Explodes :</strong> un joueur doit désamorcer une bombe en suivant les instructions des autres. L'écoute et la clarté sont les clés de la survie !
+    </li>
+  </ul>
+  Ces jeux ne sont que des prétextes pour apprendre à mieux interagir et résoudre des problèmes ensemble.
+</p>
     </section>
 
     <section class="section card">
