--- a/a-propos.html
+++ b/a-propos.html
@@ -26,11 +26,13 @@
     </section>
 
     <section class="section card">
-      <h2>Qui suis-je / Qui sommes-nous ?</h2>
-      <p>
-        Je ne suis ni un gourou, ni un champion d’esport : juste quelqu’un qui connaît les deux côtés de l’écran, et qui croit qu’on peut faire mieux ensemble. L'envie d'inventer un nouveau modèle d’accompagnement par le jeu.<br><br>
-        Ce projet est jeune, mais il s’appuie sur des partenaires : la commune de Walhain etla Fédération belge d’esport.
-      </p>
+      <h2>Mon parcours : entre passion du jeu et engagement éducatif</h2>
+<p>
+  Passionné de jeux vidéo depuis toujours, je suis aussi profondément conscient des défis que cette pratique peut poser aux familles. Mon parcours m'a convaincu qu'il manquait un maillon essentiel : un lieu qui allie le plaisir de jouer et l'apprentissage de compétences de vie, loin de la pression de la compétition pure.
+</p>
+<p>
+  Ludus Mentis est né de cette vision. Bien que le projet soit jeune, il bénéficie déjà du soutien de partenaires clés comme la <strong>commune de Walhain</strong> et la <strong>Fédération Belge d’Esport</strong>, qui croient en notre approche innovante.
+</p>
     </section>
 
     <section class="section card">
